[tool.poetry]
name = "vk-set-online"
version = "0.1.0"
description = ""
authors = ["fastcode <fast.code.auth@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_set_online"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
